full class name for application

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.romazzz.gmclient">
 
     <application
-        android:name=".GCApp"
+        android:name="com.romazzz.gmclient.GCApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
